--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "history": "^4.7.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
