--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
+    "material-ui-confirm-button": "^0.2.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
